infra/k8s/auth-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-cluster-ip-srv
spec:
  type: ClusterIP # default is ClusterIP [ClusterIP | NodePort | LoadBalancer | ExternalName]
  selector:
    app: ticketing-auth
  ports:
    - name: ticketing-auth
      protocol: TCP
      port: 4001 # node accept request on this port
      targetPort: 4001 # request will forward to pod on this port
