infra/k8s/auth-mongo-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-mongo-cluster-ip-srv
spec:
  type: ClusterIP # default is ClusterIP [ClusterIP | NodePort | LoadBalancer | ExternalName]
  selector:
    app: ticketing-auth-mongo
  ports:
    - name: ticketing-auth-mongo
      protocol: TCP
      port: 27017 # node accept request on this port
      targetPort: 27017 # request will forward to pod on this port
