infra/k8s/front-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-front-cluster-ip-srv
spec:
  type: ClusterIP # default is ClusterIP [ClusterIP | NodePort | LoadBalancer | ExternalName]
  selector:
    app: ticketing-front
  ports:
    - name: ticketing-front
      protocol: TCP
      port: 3000 # node accept request on this port
      targetPort: 3000 # request will forward to pod on this port
