infra/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing-app.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Exact
            backend:
              service:
                name: ticketing-auth-cluster-ip-srv
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Exact
            backend:
              service:
                name: ticketing-front-cluster-ip-srv
                port:
                  number: 3000
